# provenny

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  cut.yml  docs.yml  release.yml
docs/: conf.py  index.rst
provenny/: __init__.py  _kernel.py  _region.py  _shape.py  _types.py  _venn.py  _zone.py
tests/: conftest.py  test_arc.py  test_benchmark.py  test_diagram.py  test_disconnect.py  test_intersection.py  test_plot.py  test_region.py  test_shape.py  test_venn.py  test_zone.py
typings/numba/: __init__.pyi  types.pyi
typings/scipy/: __init__.pyi
typings/scipy/optimize/: __init__.pyi
